--- a/frontend/style/member/style.css
+++ b/frontend/style/member/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   background: #213448;
 }
 
@@ -20,9 +20,11 @@ body {
   gap: 10px;
 }
 
-#greeting {
+#greeting,
+#welcome-member-name {
   color: #000;
   font-weight: 500;
+  text-transform: uppercase;
 }
 
 .profile-info img {
@@ -31,7 +33,7 @@ body {
   border-radius: 50%;
   background-color: #fff;
   padding: 5px;
-  box-shadow: 0 0 4px rgba(0,0,0,0.1);
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
   object-fit: cover;
 }
 
@@ -58,7 +60,8 @@ body {
 .welcome-container::before {
   content: "";
   position: absolute;
-  top: 0; left: 0;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-image: var(--bg-img);
@@ -92,7 +95,8 @@ body {
   color: #000;
 }
 
-.welcome-text h1, .welcome-text h2 {
+.welcome-text h1,
+.welcome-text h2 {
   margin: 0;
   padding: 0;
 }
