--- a/frontend/style/kasir/stayle.css
+++ b/frontend/style/kasir/stayle.css
@@ -75,7 +75,6 @@ body {
 .search-box {
   padding: 10px 12px;
   width: 220px;
-  border: 2px solid #ccc;
   border-radius: 8px;
   font-size: 14px;
 }
@@ -130,4 +129,35 @@ tbody tr:hover {
   border-radius: 6px;
   cursor: pointer;
   font-size: 13px;
+}
+.logout {
+  top: 100px;
+  right: 20px;
+  z-index: 10;
+}
+
+.logout button {
+  background-color: #ff5b5b;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  font-weight: 600;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.logout button:hover {
+  background-color: #e04343;
+  transform: scale(1.05);
+}
+
+.logout button:active {
+  transform: scale(0.98);
+}
+
+.buttonContainer {
+  display: flex;
+  
 }
