--- a/frontend/style/kasir/stayle.css
+++ b/frontend/style/kasir/stayle.css
@@ -61,15 +61,15 @@ body {
   margin-bottom: 20px;
 }
 
-.add-btn {
+.add button {
   background-color: #22c55e;
   color: white;
   border: none;
-  padding: 10px 20px;
-  border-radius: 8px;
+  padding: 9px 15px;
+  border-radius: 10px;
   cursor: pointer;
-  font-weight: bold;
-  font-size: 14px;
+  font-weight: 600;
+  font-size: 12px;
 }
 
 .search-box {
