--- a/frontend/style/ADMIN/admin-display.css
+++ b/frontend/style/ADMIN/admin-display.css
@@ -108,12 +108,11 @@
 
 .MainBoardBody {
     width: 100%;
-    height: 90%;
+    height: 100%;
     display: flex;
-    align-items: center;
     justify-content: center;
-    flex-direction: column;
-    
+    align-items: center;
+ 
 }
 
 .Content1 {
@@ -228,4 +227,14 @@
     align-items: center;
     border-radius: 5px;
 
+}
+
+.SecBBody {
+    width: 95%;
+    height: 95%;
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    border-radius: 20px;
 }
